# click2photon

./: .gitignore  CLAUDE.md  COMPARISON.md  README.md  analyze.md  analyze.py  analyze_all.py  build_vulkan.sh  flash_rp2040.sh  main.py  pyproject.toml  run_vulkan.sh
arduino/: arduino.ino
color-switcher-vulkan/: CMakeLists.txt  README_VULKAN.md  color-switcher.cpp
hardware/: breadboard_perfboard.diy
hardware/enclosure/: enclosure.scad
hardware/kicad/: Untitled.kicad_pcb  Untitled.kicad_prl  Untitled.kicad_pro  Untitled.kicad_sch
test_run1/: test_matrix.md  test_setup.md
